--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+:root {
+  --main-red: #ff6060
+}
+
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
